# langdon

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: chat.py  prompt.py  state.py
app/chat/: components.py  detection.py  page.py  steps.py
app/ingestion/: pdf.py  scrape.py
app/llm/: prompt.py  setup.py
