[tool.poetry]
name = "langdon"
version = "0.1.0"
description = ""
authors = ["Caio Ferreira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
dspy = "^2.5.41"
pyperclip = "^1.9.0"
pymupdf = "^1.24.14"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
